# llm-plugin-squint

./: llm_tools_squint.py  plugin.py  pyproject.toml
js/: compiler_iife.js  squint_bundle.js
llmtoolsquint/: __init__.py
